kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketnow
  labels:
    name: ticketnow
    app: ticketnow
